deployment.webapi.yaml
# Ingress
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mtls-webapi-server-ingress
  namespace: mtls-example
  labels:
    name: mtls-webapi-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-tls-secret: "mtls-example/ca-certificate"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mtls-example-webapi.friday.local
      secretName: ingress-tls
  rules:
    - host: mtls-example-webapi.friday.local
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: mtls-webapi-server-service
              port: 
                number: 80
---
# Service
kind: Service
apiVersion: v1
metadata:
  name: mtls-webapi-server-service
  namespace: mtls-example
spec:
  selector:
    app: mtls-webapi-server
  ports: 
  - name: mtls-webapi-server-port
    port: 80
---
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mtls-webapi-server
  namespace: mtls-example
spec:
  selector:
    matchLabels:
      app: mtls-webapi-server
  template:
    metadata:
      labels:
        app: mtls-webapi-server
    spec:
      volumes:
      - name: tls-secret
        secret:
          secretName: pod-tls
      containers:
      - name: mtls-webapi-server
        image: mtls-webapi-server:local
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: tls-secret
          mountPath: /etc/tls 
          readOnly: true
